Restored to 'b85b538f50b7e7d79123da1a48d67bb59a2ff8f9'
Replit-Restored-To: b85b538f50b7e7d79123da1a48d67bb59a2ff8f9

--- a/client/index.html
+++ b/client/index.html
@@ -36,12 +36,12 @@
         // Load Scandit SDK modules
         const coreModule = await import('https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.2.1/build/js/index.js');
         const barcodeModule = await import('https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.2.1/build/js/index.js');
-        const labelModule = await import('https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.2.1/build/js/index.js');
+        const textModule = await import('https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-text@7.2.1/build/js/index.js');
         
         // Assign to global object
         window.ScanditSDK.core = coreModule;
         window.ScanditSDK.barcode = barcodeModule;
-        window.ScanditSDK.label = labelModule;
+        window.ScanditSDK.text = textModule;
         window.ScanditSDK.loaded = true;
         
         console.log("Scandit SDK modules loaded successfully");
@@ -62,21 +62,21 @@
         "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.2.1/build/js/index.js",
       "@scandit/web-datacapture-barcode/":
         "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.2.1/",
-      "@scandit/web-datacapture-label":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.2.1/build/js/index.js",
-      "@scandit/web-datacapture-label/":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.2.1/"
+      "@scandit/web-datacapture-text":
+        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-text@7.2.1/build/js/index.js",
+      "@scandit/web-datacapture-text/":
+        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-text@7.2.1/"
     }
   }
   </script>
 
-  <!-- Scandit Smart Data Capture SDK (core + barcode + label) – v7.2.1 -->
+  <!-- Scandit Smart Data Capture SDK (core + barcode + text) – v7.2.1 -->
   <link rel="modulepreload"
         href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.2.1/build/js/index.js" />
   <link rel="modulepreload"
         href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.2.1/build/js/index.js" />
   <link rel="modulepreload"
-        href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.2.1/build/js/index.js" />
+        href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-text@7.2.1/build/js/index.js" />
 </head>
 
 <body>
