--- a/client/index.html
+++ b/client/index.html
@@ -34,9 +34,9 @@
     window.addEventListener('DOMContentLoaded', async () => {
       try {
         // Load Scandit SDK modules
-        const coreModule = await import('https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.2.1/build/js/index.js');
-        const barcodeModule = await import('https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.2.1/build/js/index.js');
-        const labelModule = await import('https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.2.1/build/js/index.js');
+        const coreModule = await import('https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.3.0/build/js/index.js');
+        const barcodeModule = await import('https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/build/js/index.js');
+        const labelModule = await import('https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.3.0/build/js/index.js');
         
         // Assign to global object
         window.ScanditSDK.core = coreModule;
@@ -55,34 +55,28 @@
   {
     "imports": {
       "@scandit/web-datacapture-core":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.2.1/build/js/index.js",
+        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.3.0/build/js/index.js",
       "@scandit/web-datacapture-core/":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.2.1/",
+        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.3.0/",
       "@scandit/web-datacapture-barcode":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.2.1/build/js/index.js",
+        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/build/js/index.js",
       "@scandit/web-datacapture-barcode/":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.2.1/",
-      "@scandit/web-datacapture-text":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-text@7.2.1/build/js/index.js",
-      "@scandit/web-datacapture-text/":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-text@7.2.1/",
+        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/",
       "@scandit/web-datacapture-label":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.2.1/build/js/index.js",
+        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.3.0/build/js/index.js",
       "@scandit/web-datacapture-label/":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.2.1/"
+        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.3.0/"
     }
   }
   </script>
 
-  <!-- Scandit Smart Data Capture SDK (core + barcode + text) – v7.2.1 -->
+  <!-- Scandit Smart Data Capture SDK (core + barcode + label) – v7.3.0 -->
   <link rel="modulepreload"
-        href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.2.1/build/js/index.js" />
+        href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.3.0/build/js/index.js" />
   <link rel="modulepreload"
-        href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.2.1/build/js/index.js" />
+        href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/build/js/index.js" />
   <link rel="modulepreload"
-        href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-text@7.2.1/build/js/index.js" />
-  <link rel="modulepreload"
-        href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.2.1/build/js/index.js" />
+        href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.3.0/build/js/index.js" />
 </head>
 
 <body>
