fix: remove import map to resolve Scandit internal module conflicts, use global SDK loading instead

--- a/client/index.html
+++ b/client/index.html
@@ -50,21 +50,7 @@
     });
   </script>
 
-  <script type="importmap">
-  {
-    "imports": {
-      "@scandit/web-datacapture-core":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.3.0/build/js/index.js",
-      "@scandit/web-datacapture-core/":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.3.0/",
-      "@scandit/web-datacapture-barcode":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/build/js/index.js",
-      "@scandit/web-datacapture-barcode/":
-        "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/",
-
-    }
-  }
-  </script>
+  <!-- Import map removed to avoid module resolution conflicts with Scandit SDK -->
 
   <!-- Scandit Smart Data Capture SDK (core + barcode) – v7.3.0 -->
   <link rel="modulepreload"
