feat: re-enable OCR mode using Scandit Smart Label Capture with proper import map configuration

--- a/client/index.html
+++ b/client/index.html
@@ -31,16 +31,22 @@
         "@scandit/web-datacapture-barcode": "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/build/js/index.js",
         "@scandit/web-datacapture-barcode/": "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/",
         "@scandit/web-datacapture-barcode/build/": "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/build/",
-        "@scandit/web-datacapture-barcode/build/js/": "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/build/js/"
+        "@scandit/web-datacapture-barcode/build/js/": "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/build/js/",
+        "@scandit/web-datacapture-label": "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.3.0/build/js/index.js",
+        "@scandit/web-datacapture-label/": "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.3.0/",
+        "@scandit/web-datacapture-label/build/": "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.3.0/build/",
+        "@scandit/web-datacapture-label/build/js/": "https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.3.0/build/js/"
       }
     }
   </script>
 
-  <!-- Scandit Smart Data Capture SDK (core + barcode) – v7.3.0 -->
+  <!-- Scandit Smart Data Capture SDK (core + barcode + label) – v7.3.0 -->
   <link rel="modulepreload"
         href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-core@7.3.0/build/js/index.js" />
   <link rel="modulepreload"
         href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-barcode@7.3.0/build/js/index.js" />
+  <link rel="modulepreload"
+        href="https://cdn.jsdelivr.net/npm/@scandit/web-datacapture-label@7.3.0/build/js/index.js" />
 
 </head>
 
